tests/golden/errors/printf-prec-huge.rk
fn main() {
    printf("%.999999999f\n", 1.5)
}
